# autodrone

./: .gitignore  README.md  pyproject.toml  refactor_plan.md
aigp/: 20260705_174803_replay.webm
aigp/pilot/orbslam3_vio_server/: CMakeLists.txt
autonomy_core/: goals.txt  test.py
autonomy_core.egg-info/: SOURCES.txt  top_level.txt
docs/: autonomy_math_reference.md  competition_adapter_phase0_inventory.md  competition_adapter_phase4b_telemetry_evidence.md  competition_adapter_phase5a_command_semantics.md  competition_adapter_phase6a_runner_skeleton.md  competition_adapter_phase6e_live_receive_dry_run.md  competition_adapter_phase7_gazebo_guard.md  competition_adapter_phase8_25_geometry_audit.md  competition_adapter_phase8_5_px4_gazebo_surrogate_harness.md  competition_adapter_phase8_5b_surrogate_scenarios.md  competition_adapter_phase8_5c_udp_vision_loopback.md  competition_adapter_phase8_5d_surrogate_runner.md  competition_adapter_phase8_5e_surrogate_vision_bridge.md  competition_adapter_phase8_deterministic_tests.md  competition_adapter_phase9a_autonomy_profile.md  competition_adapter_phase9b_2_transform_validation.md  competition_adapter_phase9b_real_perception_dry_run.md  competition_adapter_phase9c_command_dry_run.md  competition_adapter_phase9d_px4_gazebo_command_send.md  competition_adapter_phase9e_1_continuous_offboard_stream.md  competition_adapter_phase9e_2_command_safety_diagnostics.md  competition_adapter_phase9e_3_body_rate_interface_smoke.md  competition_adapter_phase9e_4_attitude_angle_hover_smoke.md  competition_adapter_phase9e_px4_gazebo_arm_offboard.md  competition_adapter_phase9f_1_debug_yaw_override.md  competition_adapter_phase9f_2_fixed_rate_setpoint_stream.md  competition_adapter_phase9f_3a_competition_setpoint_streamer.md  competition_adapter_phase9f_3b_generic_streamer_sender_integration.md  competition_adapter_phase9f_3c_generic_fallback_setpoint.md  competition_adapter_phase9f_full_surrogate_autonomy_loop.md  competition_adapter_plan.md  competition_adapter_readiness.md  px4_gazebo_UDP_14540_test.txt  windows_setup_pycharm.md
tests/: README.md  test_competition_autonomy_factory.py  test_competition_camera_model.py  (+18 more)
(+135 files in other folders)
